--- a/static/style.css
+++ b/static/style.css
@@ -140,6 +140,7 @@ canvas {
 }
 
 input {
+    display: block;
     cursor: pointer;
     margin-top: 25px;
     width: 250px;
@@ -154,4 +155,13 @@ input {
     margin-left: 30px;
     height: 300px;
     width: 50px;
+}
+
+.lightheader {
+    display: flex;
+    align-items: center;
+}
+
+.lightheader label {
+    right: 200px;
 }
